--- a/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj
+++ b/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj
@@ -110,6 +110,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="String.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="String.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
