--- a/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj
+++ b/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="String.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
