--- a/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj.filters
+++ b/AssessmentOne/TextBaseAdventure/TextBaseAdventure.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="String.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="String.h">
